--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,10 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "test-cases": [
+            "php bin/console --env=test doctrine:fixtures:load --no-interaction",
+            "php bin/phpunit"
         ]
     },
     "conflict": {
